unpackaged/main/default/objects/Audit_Rule_Sub_Criteria__c/Audit_Rule_Sub_Criteria__c.object-meta.xml
<CustomObject>
    <label>Audit Rule Sub Criteria</label>
    <nameField>
        <displayFormat>ARSC-{0000000000}</displayFormat>
        <label>Audit Rule Sub Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Rule Sub Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>