unpackaged/main/default/objects/Audit_Rule_Sub_Criteria__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total_Price__c</fullName>
            </value>
            <value>
                <fullName>Unit__c</fullName>
                <label>Quantity</label>
            </value>
            <value>
                <fullName>Unit_Price__c</fullName>
            </value>
            <value>
                <fullName>Adjustment_Status__c</fullName>
                <isActive>false</isActive>
                <label>Adjustment_Status__c</label>
            </value>
            <value>
                <fullName>Calculated_Unit__c</fullName>
                <isActive>false</isActive>
                <label>Calculated_Unit__c</label>
            </value>
            <value>
                <fullName>Charge_to_Account__c</fullName>
                <isActive>false</isActive>
                <label>Charge_to_Account__c</label>
            </value>
            <value>
                <fullName>Cleared_Timestamp_TOD_Code__c</fullName>
                <isActive>false</isActive>
                <label>Cleared_Timestamp_TOD_Code__c</label>
            </value>
            <value>
                <fullName>Cost__c</fullName>
                <isActive>false</isActive>
                <label>Cost__c</label>
            </value>
            <value>
                <fullName>CreatedById</fullName>
                <isActive>false</isActive>
                <label>CreatedById</label>
            </value>
            <value>
                <fullName>CreatedDate</fullName>
                <isActive>false</isActive>
                <label>CreatedDate</label>
            </value>
            <value>
                <fullName>External_Id__c</fullName>
                <isActive>false</isActive>
                <label>External_Id__c</label>
            </value>
            <value>
                <fullName>Facility__c</fullName>
                <isActive>false</isActive>
                <label>Facility__c</label>
            </value>
            <value>
                <fullName>Id</fullName>
                <isActive>false</isActive>
                <label>Id</label>
            </value>
            <value>
                <fullName>LastModifiedById</fullName>
                <isActive>false</isActive>
                <label>LastModifiedById</label>
            </value>
            <value>
                <fullName>LastModifiedDate</fullName>
                <isActive>false</isActive>
                <label>LastModifiedDate</label>
            </value>
            <value>
                <fullName>Name</fullName>
                <isActive>false</isActive>
                <label>Name</label>
            </value>
            <value>
                <fullName>Old_Unit_Value__c</fullName>
                <isActive>false</isActive>
                <label>Old_Unit_Value__c</label>
            </value>
            <value>
                <fullName>Override_Pricing__c</fullName>
                <isActive>false</isActive>
                <label>Override_Pricing__c</label>
            </value>
            <value>
                <fullName>Pay_Facility__c</fullName>
                <isActive>false</isActive>
                <label>Pay_Facility__c</label>
            </value>
            <value>
                <fullName>Pay_Reciprocal__c</fullName>
                <isActive>false</isActive>
                <label>Pay_Reciprocal__c</label>
            </value>
            <value>
                <fullName>Product_Code__c</fullName>
                <isActive>false</isActive>
                <label>Product_Code__c</label>
            </value>
            <value>
                <fullName>Product__c</fullName>
                <isActive>false</isActive>
                <label>Product__c</label>
            </value>
            <value>
                <fullName>Ready_for_Invoicing__c</fullName>
                <isActive>false</isActive>
                <label>Ready_for_Invoicing__c</label>
            </value>
            <value>
                <fullName>Reason_for_Decision__c</fullName>
                <isActive>false</isActive>
                <label>Reason_for_Decision__c</label>
            </value>
            <value>
                <fullName>Requested_Cost__c</fullName>
                <isActive>false</isActive>
                <label>Requested_Cost__c</label>
            </value>
            <value>
                <fullName>Requested_Unit__c</fullName>
                <isActive>false</isActive>
                <label>Requested_Unit__c</label>
            </value>
            <value>
                <fullName>Tax__c</fullName>
                <isActive>false</isActive>
                <label>Tax__c</label>
            </value>
            <value>
                <fullName>Work_Order_Call_Type__c</fullName>
                <isActive>false</isActive>
                <label>Work_Order_Call_Type__c</label>
            </value>
            <value>
                <fullName>Work_Order_Clear_Code__c</fullName>
                <isActive>false</isActive>
                <label>Work_Order_Clear_Code__c</label>
            </value>
            <value>
                <fullName>Work_Order_RAP_Status__c</fullName>
                <isActive>false</isActive>
                <label>Work_Order_RAP_Status__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>