unpackaged/main/default/objects/Audit_Rule_Sub_Criteria__c/fields/Audit_Rule_Critieria__c.field-meta.xml
<CustomField>
    <fullName>Audit_Rule_Critieria__c</fullName>
    <label>Audit Rule Critieria</label>
    <referenceTo>Audit_Rule_Critieria__c</referenceTo>
    <relationshipLabel>Audit Rule Sub Criteria</relationshipLabel>
    <relationshipName>Audit_Rule_Sub_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>